--- a/package.json
+++ b/package.json
@@ -18,29 +18,28 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-notify": "^0.4.1",
-    "gulp": "*",
+    "gulp": "^4.0.2",
     "gulp-add-src": "^0.2.0",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-clean": "^0.3.1",
+    "gulp-cheerio": "^0.6.3",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "*",
     "gulp-csso": "^1.0.0",
     "gulp-filter": "^2.0.2",
     "gulp-html-minifier": "^0.1.6",
-    "gulp-htmlclean": "^2.6.3",
+    "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^1.1.1",
     "gulp-if": "^1.2.5",
     "gulp-inject": "^1.2.0",
-    "gulp-plumber": "^1.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.4.0",
+    "gulp-rev-replace": "^0.4.4",
     "gulp-uglify": "^1.1.0",
-    "gulp-uglifycss": "^1.0.4",
+    "gulp-uglifycss": "^1.1.0",
     "gulp-uncss": "^1.0.1",
-    "livereload": "*"
+    "livereload": "^0.9.1"
   },
   "dependencies": {
     "gulp-concat": "^2.5.2",
-    "gulp-uglifycss": "^1.0.4",
     "gulp-uglifyjs": "^0.6.1"
   }
 }
