--- a/package.json
+++ b/package.json
@@ -39,9 +39,14 @@
     "livereload": "^0.9.1"
   },
   "dependencies": {
+    "clean-css": "^4.2.3",
+    "cryptiles": "^4.1.3",
     "gulp-concat": "^2.5.2",
     "gulp-uglifyjs": "^0.6.1",
+    "hoek": "^6.1.3",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "minimatch": "^3.0.4"
   }
 }
