--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
-    "minimatch": "^3.0.4"
+    "minimatch": "^3.0.4",
+    "stringstream": "^1.0.0",
+    "underscore.string": "^3.3.5"
   }
 }
